edge case bugs on mobile

--- a/v1.4/styles.css
+++ b/v1.4/styles.css
@@ -234,4 +234,9 @@ p {
     .hideBtn {
         display: none;
     }
+
+    /* edge case */
+    button {
+        padding-right: 5px;
+    }
 }
